--- a/ms_3_res_disc_concl.Rmd
+++ b/ms_3_res_disc_concl.Rmd
@@ -63,7 +63,7 @@ The lower left quadrant includes species (n = `r n_q4`) where alignment is poor 
 
 ## Coral depth exploration
 
-Because corals dominate the upper-left "distribution-aligned" quadrant of Fig 2A (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), we explored implications of explicitly restricting IUCN ranges to depths based on species' life histories.  This adjustment was not necessary for AquaMaps data because models explicitly include ocean depth preference as a parameter.  While depth is recommended by the IUCN as a criterion for providers of range maps ("The limits of distribution can be determined by using known occurrences of the species, along with the knowledge of habitat preferences, remaining suitable habitat, elevation limited, and other expert knowledge of the species and its range." [REF IS THIS IN THE TRAINING MATERIALS? @iucn_iucn_2015, from website:  http://www.iucnredlist.org/technical-documents/red-list-training/iucnspatialresources]), it is not presented as a requirement, so we cannot take its inclusion for granted. Additionally, IUCN Red List mapping standards formerly required, and still allow, a 50 km buffer around the coastline for coastal species [iucn_iucn_2015-1]; such a buffer directly conflicts with habitat limitations (such as depth) and distorts our understanding of species distribution.
+Because corals dominate the upper-left "distribution-aligned" quadrant of Fig 2A (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), we explored implications of explicitly restricting IUCN ranges to depths based on species' life histories.  This adjustment was not necessary for AquaMaps data because models explicitly include ocean depth preference as a parameter.  While depth is recommended by the IUCN as a criterion for providers of range maps ("The limits of distribution can be determined by using known occurrences of the species, along with the knowledge of habitat preferences, remaining suitable habitat, elevation limited, and other expert knowledge of the species and its range." REF IS THIS IN THE TRAINING MATERIALS? [@iucn_iucn_2015]), it is not presented as a requirement, so we cannot take its inclusion for granted. Additionally, IUCN Red List mapping standards formerly required, and still allow, a 50 km buffer around the coastline for coastal species [@iucn_red_2015]; such a buffer directly conflicts with habitat limitations (such as depth) and distorts our understanding of species distribution.
 
 Fig 3A shows aggregated ranges of the 463 coral species mapped in the IUCN dataset, with their ranges broken into proportional area deeper and shallower than 200 m.  According to IUCN descriptions, none of these species is indicated to occur deeper than 200 m, and 94% are confined to waters shallower than 50 m; seven of the mapped species had no reported depth information.  Clipping coral ranges to shallower than 200 m eliminated an average of 47.6% of the total predicted area while still allowing for a generous estimate of suitable habitat.
 
