--- a/ms_3_res_disc_concl.Rmd
+++ b/ms_3_res_disc_concl.Rmd
@@ -61,6 +61,8 @@ Species found in the lower right quadrant (n = `r n_q3`) represent cases of "two
 
 The lower left quadrant includes species (n = `r n_q4`) where alignment is poor in both dimensions.  In this quadrant, the IUCN range is larger for only 24.6% of species; suggesting a systematic introduction of commission errors by AquaMaps and/or omission errors by IUCN.  Data-poor species are more common in this quadrant; indeed, the median number of species occurrence records (averaging occurrences from the Ocean Biogeographic Information System (OBIS) [@obis_data_2016] and the Global Biodiversity Information Facility (GBIF) [@gbif_global_2010]) for this quadrant is `r med_occ_q4` records, compared to a median of `r med_occ_q123` records for species across the other three quadrants.  The AquaMaps dataset offers its own quality metric based on the number of unique 0.5° cells containing valid occurrences; for this quadrant, the median "occurcells" is 11 compared to a median of 40 across the other three quadrants.  Care should be taken when using distribution and range maps based upon fewer observations, as they clearly bear greater uncertainty; AquaMaps explicitly warns against using any of its maps generated with an "occurcells" count fewer than 10 [@kaschner_aquamaps:_2015].
 
+It is unsurprising that species with expert-reviewed AquaMaps fare far better in this paired-map analysis; for expert-reviewed maps, the mean distribution alignment improved to 75.7% (compared to 63.1% for the full set of paired maps), while the mean area alignment improved 60.8% (compared to 54.7%).  See Fig S4 for a version of Fig 2A and 2B focused on expert-reviewed species.
+
 ## Coral depth exploration
 
 Because corals dominate the upper-left "distribution-aligned" quadrant of Fig 2A (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), we explored implications of explicitly restricting IUCN ranges to depths based on species' life histories.  This adjustment was not necessary for AquaMaps data because models explicitly include ocean depth preference as a parameter.  While depth is recommended by the IUCN as a criterion for providers of range maps ("The limits of distribution can be determined by using known occurrences of the species, along with the knowledge of habitat preferences, remaining suitable habitat, elevation limited, and other expert knowledge of the species and its range." REF IS THIS IN THE TRAINING MATERIALS? [@iucn_iucn_2015]), it is not presented as a requirement, so we cannot take its inclusion for granted. Additionally, IUCN Red List mapping standards formerly required, and still allow, a 50 km buffer around the coastline for coastal species [@iucn_red_2015]; such a buffer directly conflicts with habitat limitations (such as depth) and distorts our understanding of species distribution.
@@ -71,7 +73,7 @@ Fig 3A shows aggregated ranges of the 463 coral species mapped in the IUCN datas
 
 > __Fig 3.  Effect of 200 m depth constraint on IUCN range maps for coral species.__ (A) Aggregate map combining ranges of the 463 coral species mapped in the IUCN dataset, showing raw ranges and ranges clipped to 200 m depth. (B) Alignment quadrant breakdown of paired map coral species using original data from IUCN and AquaMaps (as in Fig 2B) and the same species with IUCN ranges clipped to 200 m depth.
 
-In constraining coral ranges to appropriate depths, we see a strong increase in the apparent alignment of species maps between IUCN and AquaMaps (Fig 3B).  Membership in the "well-aligned" quadrant jumped from 22.4% to 76.2%, with a corresponding decrease in all other quadrants.  By excluding the unsuitable areas from IUCN's predicted range, we eliminate preventable commission errors and more closely approximate the range described by AquaMaps.  See Fig S4 to examine the shifts of individual species among the quadrants.
+In constraining coral ranges to appropriate depths, we see a strong increase in the apparent alignment of species maps between IUCN and AquaMaps (Fig 3B).  Membership in the "well-aligned" quadrant jumped from 22.4% to 76.2%, with a corresponding decrease in all other quadrants.  By excluding the unsuitable areas from IUCN's predicted range, we eliminate preventable commission errors and more closely approximate the range described by AquaMaps.  See Fig S5 to examine the shifts of individual species among the quadrants.
 
 The true distribution of each of these corals remains imperfectly known.  Certainly some commission errors result from from IUCN Red List mapping standards including coastline buffers and “minimum convex polygons”, and others may be due to experts taking a precautionary (i.e., generous) approach to likely occurrence.  Yet a simple and sensible shift in method drastically decreases the likelihood of introducing commission errors, with little chance of introducing omission errors, greatly improving our confidence in the remaining reported distributions for most purposes.  This change applies just as readily to the IUCN coral maps that are not included in the paired map analysis, and likely to other coastal and reef-associated flora and fauna. While species depth preferences are an easy and consistent means of constraining range predictions, other conditions such as salinity and temperature could be cautiously used to refine the results of expert opinions, much as AquaMaps models use such conditions to predict suitable habitat.
 
